--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
         
         
         {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('js/javascript-min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/main.min.js') }}"></script>
         {% endblock %}
         
         {% block jsTemplating %}
