--- a/app/Resources/views/ruban_nav.html.twig
+++ b/app/Resources/views/ruban_nav.html.twig
@@ -11,7 +11,7 @@
 <nav>
 	<h1>Ministries</h1>
 	<ul>
-		<li><a href="">Gospel Center TV</a></li>
+		<li><a href="{{ path('gospelcenterMedia') }}">Gospel Center TV</a></li>
 		<li><a href="">Gospel Diffusion</a></li>
 	</ul>
 </nav>
