--- a/app/Resources/views/mobile.html.twig
+++ b/app/Resources/views/mobile.html.twig
@@ -18,7 +18,7 @@
         
         
         {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('js/mobile-min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/mobile.min.js') }}"></script>
         {% endblock %}
         
         <script type="text/javascript">
