--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
@@ -2,8 +2,8 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/addCelebration-min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/addImage-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/addCelebration.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/addImage.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
