--- a/web/sass/layout.scss
+++ b/web/sass/layout.scss
@@ -5,6 +5,7 @@
 @import 'device';
 @import 'font';
 @import 'size';
+@import 'tv';
 
 
 nav.sub_nav {
@@ -419,9 +420,8 @@ div.arrow_up {
         }
     }
     
+    &.selections,
     &.celebrations {
-        
-        
         #container {
             margin: 0px;
             padding: 0px;
@@ -431,167 +431,9 @@ div.arrow_up {
             width: 100%;
             overflow-x: hidden;
         }
-        
-        .nextCelebrations {
-            height: 45%;
-            top: 14%;
-            width: 100%;
-            
-            nav {
-                top: 56%;
-            }
-            
-            div.arrow {
-                width: 20%;
-                top: 13.5%;
-                height: 40%;
-            }
-            
-            .slide {
-                height: 40%;
-                width: 100%;
-                margin: 0 auto;
-                left: 0px;
-                position: absolute;
-                top: 13.5%;
-                min-width: 800px;
-                display: none;
-                
-                .picture {
-                    float: left;
-                    width: 58%;
-                    overflow: hidden;
-                    height: 100%;
-                    
-                    img {
-                        height: 100%;
-                        display: block;
-                        float: right;
-                    }
-                }
-                
-                .details {
-                    float: right;
-                    width: 39%;
-                    padding-top: 80px;
-                    
-                    h1 {
-                        font-size: 1.3em;
-                        
-                        span {
-                            font-family: $font-bold;
-                        }
-                    }
-                    
-                    h2 {
-                        font-size: 1.2em;
-                    }
-                    
-                    a {
-                        text-decoration: none;
-                        color: $red;
-                    }
-                }
-            }
-            
-            
-        }
-        
-        .lastCelebrations {
-            height: 25%;
-            position: absolute;
-            top: 62%;
-            width: 100%;
-            
-            h1 {
-                font-size: 1.4em;
-                height: 25%;
-                text-align: center;
-            }
-            
-            .clip {
-                height: 75%;
-                margin: 0 auto;
-                width: auto;
-                text-align: center;
-                
-                article {
-                    display: inline-block;
-                    margin: 0 0.5%;
-                    height: 100%;
-                    
-                    img {
-                        height: 85%;
-                        margin: 0px;
-                        padding: 0px;
-                    }
-                    
-                    section.details {
-                        height: 10%;
-                        margin: 0px;
-                        color: $grayDark;
-                        
-                        h1 {
-                            font-size: 0.8em;
-                            float: left;
-                            font-family: $font-bold;
-                        }
-                        
-                        span {
-                            font-size: 0.8em;
-                            float: right;
-                        }
-                    }
-                    
-                    &.more {
-                        border: 1px solid $black;
-                        width: 177.8px;
-                        height: 100px;
-                        top: -50px;
-                        position: relative;
-                        
-                        span {
-                            text-align: center;
-                            padding-top: 40px;
-                            display: block;
-                        }
-                    }
-                }
-
-            }
-            
-        }
-        
-        nav#slides {
-            position: absolute;
-            width: 100%;
-            
-            ul {
-                text-align: center;
-                
-                li {
-                    border: 1px solid $red;
-                    margin-left: 5px;
-                    margin-right: 5px;
-                    border-radius: 6px;
-                    display: inline-block;
-                    width: 10px;
-                    height: 10px;
-                    cursor: pointer;
-                    
-                    &:hover {
-                        background: $red;
-                    }
-                    
-                    &.current {
-                        background: $red;
-                    }
-                }
-            }
-        }
-
-        
     }
+    
+    
     
     .slider {
         div.arrow {
@@ -654,6 +496,191 @@ div.arrow_up {
 		@include gradient($red, $redBottom, $redTop);
 		color: $white;
 	}
+}
+
+section.sliderTop {
+    height: 45%;
+    top: 14%;
+    width: 100%;
+    
+    nav {
+        top: 56%;
+    }
+    
+    div.arrow {
+        width: 20%;
+        top: 13.5%;
+        height: 40%;
+    }
+    
+    .slide {
+        height: 40%;
+        width: 100%;
+        margin: 0 auto;
+        left: 0px;
+        position: absolute;
+        top: 13.5%;
+        min-width: 800px;
+        display: none;
+        color: $black;
+        
+        .picture {
+            float: left;
+            width: 58%;
+            overflow: hidden;
+            height: 100%;
+            
+            img {
+                height: 100%;
+                display: block;
+                float: right;
+            }
+        }
+        
+        .details {
+            float: right;
+            width: 39%;
+            padding-top: 80px;
+            
+            h1 {
+                font-size: 1.3em;
+                
+                span {
+                    font-family: $font-bold;
+                }
+            }
+            
+            h2 {
+                font-size: 1.2em;
+            }
+            
+            a {
+                text-decoration: none;
+                color: $red;
+            }
+        }
+    }
+    
+    
+}
+
+section.sliderDown {
+    height: 25%;
+    position: absolute;
+    top: 62%;
+    width: 100%;
+    
+    h1 {
+        font-size: 1.4em;
+        height: 25%;
+        text-align: center;
+    }
+    
+    .clip {
+        height: 75%;
+        margin: 0 auto;
+        width: auto;
+        text-align: center;
+        
+        a {
+            display: inline-block;
+            margin: 0 0.5%;
+            height: 100%;
+            
+            img {
+                height: 85%;
+                margin: 0px;
+                padding: 0px;
+            }
+            
+            section.details {
+                height: 10%;
+                margin: 0px;
+                color: $grayDark;
+                
+                h1 {
+                    font-size: 0.8em;
+                    float: left;
+                    font-family: $font-bold;
+                }
+                
+                span {
+                    font-size: 0.8em;
+                    float: right;
+                }
+            }
+            
+            &.more {
+                border: 1px solid $black;
+                width: 177.8px;
+                height: 100px;
+                top: -50px;
+                position: relative;
+                
+                span {
+                    text-align: center;
+                    padding-top: 40px;
+                    display: block;
+                }
+            }
+        }
+
+    }
+    
+}
+
+section.wall {
+    max-width: 1260px;
+    margin: 0 auto;
+    
+    
+    a {
+        display: inline-block;
+        width: 22%;
+        margin: 1.5%;
+        vertical-align: middle;
+        text-decoration: none;
+        
+        img {
+            width: 100%;
+        }
+        
+        .details {
+            color: $black;
+            
+            h1 {
+                font-family: $font-bold;
+            }
+        }
+    }
+}
+
+nav#slides.redRound {
+    position: absolute;
+    width: 100%;
+    
+    ul {
+        text-align: center;
+        
+        li {
+            border: 1px solid $red;
+            margin-left: 5px;
+            margin-right: 5px;
+            border-radius: 6px;
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            cursor: pointer;
+            
+            &:hover {
+                background: $red;
+            }
+            
+            &.current {
+                background: $red;
+            }
+        }
+    }
 }
 
 footer {
