--- a/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
