--- a/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/addPage-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/addPage.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
