--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/edit.html.twig
@@ -2,8 +2,8 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/editImage-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/editImage.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
