--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
     
     {% if person.image %}
         <script type="text/javascript" src="{{ asset('js/editImage-min.js') }}"></script>
