--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -14,6 +14,6 @@
     <li><a href="{{ path('gospelcenterMedia') }}" {% if page == 'selections' %}class="current"{% endif %}>Selection</a></li>
     <li><a href="{{ path('gospelcenterMedia_speakers') }}" {% if page == 'speakers' %}class="current"{% endif %}>Orators</a></li>
     <li><a href="">Cities</a></li>
-    <li><a href="">Video</a></li>
+    <li><a href="{{ path('gospelcenterMedia_videos') }}" {% if page == 'videos' %}class="current"{% endif %}>Video</a></li>
     <li><a href="">Audio</a></li>
 {% endblock %}
