--- a/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
@@ -12,11 +12,11 @@
     
     {% set speakers = '' %}
             
-    {% for key, speaker in video.celebration.speakers %}
+    {% for key, speaker in audio.celebration.speakers %}
         
-        {% if key != 0 and key != (video.celebration.speakers|length -1) %}
+        {% if key != 0 and key != (celebration.speakers|length -1) %}
             {% set speakers = speakers ~ ', '%}
-        {% elseif key != 0 and key == (video.celebration.speakers|length -1) %}
+        {% elseif key != 0 and key == (celebration.speakers|length -1) %}
             {% set speakers = speakers ~ ' et '%}
         {% endif %}
         
@@ -30,7 +30,7 @@
                 {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
             </nav>
             
-            <h1>{% if video.celebration.title|length %}{{ video.celebration.title }}{% else %}Celebration{% endif %}</h1>
+            <h1>{% if audio.celebration.title|length %}{{ audio.celebration.title }}{% else %}Celebration{% endif %}</h1>
             
             <nav class="right">
             
@@ -38,11 +38,12 @@
         </div>
     </header>
 
-    <section class="video">
     
-        <iframe src="//player.vimeo.com/video/{{ video.ownerId }}?title=0&amp;byline=0&amp;portrait=0&amp;color=d91a15&amp;autoplay=1" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <section class="audio">
+    
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/119935095&amp;color=d91a15&amp;auto_play=true&amp;hide_related=false&amp;show_artwork=true"></iframe>
         <h2>{{ speakers }}</h2>
-        <time>{{ video.celebration.startingDate|date('d F Y') }}</time>
+        <time>{{ audio.celebration.startingDate|date('d F Y') }}</time>
         
     </section>
 
