--- a/src/gospelcenter/MediaBundle/Resources/views/Media/speaker.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/speaker.html.twig
@@ -10,15 +10,37 @@
 
 {% block body %}
 
-    <h1>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h1>
+    <header class="tv">
+        <div>
+            <nav class="left">
+                {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
+            </nav>
+            
+            <h1>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h1>
+            
+            <nav class="right">
+            
+            </nav>
+        </div>
+    </header>
     
     <section class="wall">
-        {% for celebration in celebrations %}<a href="{{ path('gospelcenterMedia_video', {'video': celebration.video.id}) }}">
-                <img src="{{ asset(celebration.image.webPath) }}" alt="{{ celebration.image.alt }}" />
-                <section class="details">
-                    <h1>{% if celebration.title|length %}{{ celebration.title }}{% else %}Celebration of {{ celebration.startingDate|date('d F Y') }}{% endif %}</h1>
-                </section>
-            </a>{% endfor %}
+        {% spaceless %}
+            {% for celebration in celebrations %}
+                
+                {% if celebration.video %}
+                    <a href="{{ path('gospelcenterMedia_video', {'video': celebration.video.id}) }}">
+                {% elseif celebration.audio %}
+                    <a href="{{ path('gospelcenterMedia_audio', {'audio': celebration.audio.id}) }}">
+                {% endif %}
+                    <img src="{{ asset(celebration.image.webPath) }}" alt="{{ celebration.image.alt }}" />
+                    <section class="details">
+                        <h1>{% if celebration.title|length %}{{ celebration.title }}{% else %}Celebration{% endif %}</h1>
+                        <span data-time="{{ celebration.startingDate|date('Y-m-d H:i:s') }}">{{ celebration.startingDate|date('d F') }}</span>
+                    </section>
+                </a>
+            {% endfor %}
+        {% endspaceless %}
     </section>
     
 {% endblock %}
