--- a/src/gospelcenter/PageBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/layout.html.twig
@@ -7,7 +7,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/page-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/page.min.js') }}"></script>
 {% endblock %}
 
 {% block body %}
